# embeddings_plot

./: README.md  example_plot.html  prepare_data.py  pyproject.toml  requirements.txt  train_model.py  words.txt
embeddings_plot/: embeddings_plot.py  embeddings_plot.py.dist  embeddings_plot3d.py
