[tool.poetry]
name = "embeddings_plot"
version = "0.1.4"
description = "A command line utility to create plots of word embeddings"
authors = ["Robert McDermott <robert.c.mcdermott@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/robert-mcdermott/embeddings_plot"
keywords = ["word2vec", "nlp", "embeddings"]

[tool.poetry.scripts]
embeddings-plot = "embeddings_plot:embeddings_plot.main"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
argparse = "^1.4.0"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
